--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -935,28 +935,27 @@
             </div>
             <div class="modal-body">
                 <form id="addMember" name="addaccount" class="form-horizontal">
-                    <p>{{ _("Who has access:")}}</p>
+                    <p ng-show="selectedPermisssions">{{ _("Who has access:")}}</p>
                     <div  class="radio-list" ng-show="selectedPermisssions">
                         <label>
-                            <input type="radio" name="optionRadio" value="public" ng-model="lead.access" ng-click="share();"/>
+                            <input type="radio" name="optionRadio" value="public" ng-model="selected_access" />
                             {{ _("public: Anyone within your organization can access and find")}}
                         </label>
                         <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="lead.access" ng-click="share();"/>
+                            <input type="radio" name="optionRadio"  value="private" ng-model="selected_access"/>
                             {{ _("private: only you and your collaborators")}}
                         </label>
                     </div>
                     <div ng-hide="selectedPermisssions">
 
-                        <label>{{ _("you can't edit this  you are not the owner")}} </label> <br>
-                        <label>{{ _("The owner is:")}}</label>
-                          <div class="invitation">
-                            <img class="google-avatar" ng-src="<%=lead.owner.google_public_profile_photo_url%>"/>
-                            <%=lead.owner.display_name%> <  <a> <%=lead.owner.email%> </a> >
-                        </div>
+                        <label style="font-size:17px !important">{{ _("You can't share")}} 
+                            <span ng-show="selectedCards.length == 1">{{ _("this lead")}}</span>
+                            <span ng-show="selectedCards.length > 1">{{ _("these leads")}}</span>
+                          {{ _("you are not the owner")}} </label> <br>
+                        <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
                     </div>
-                    <hr/>
-                    <div class='' id="collaborators">
+                    <hr ng-show="selectedPermisssions" ng-hide="selected_access=='public'"/>
+                    <!--<div ng-show="selectedPermisssions" class='' id="collaborators" ng-hide="lead.access=='public'">
                         <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                             <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
@@ -965,26 +964,38 @@
                         </div>
 
                     </div>
-                    <hr/>
+                    <hr ng-show="selectedPermisssions"/>-->
 
-                    <div ng-show="lselectedPermisssions">
-                        <p>{{ _("Invited user:")}}</p>
-                        <div class="invitation" ng-repeat="invited in sharing_with">
-                            <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
-                            <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
-                            <hr/>
-                        </div>
-
+                    <div ng-hide="selected_access=='public'">
                         <p>{{ _("Invite collaborators:")}}</p>
-                        <div class="form-group">
+                        <div class="form-group" style="margin-left: 0px; margin-right: 0px;">
                             <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
                         </div>
+                        <div id="assigeeList1" class="list-group">
+                        <div  class="taskAssigneList invitation list-group-item" ng-repeat="selected_us in sharing_with" style="padding: 5px;">
+                          <button type="button" class="close" ng-click="unselectMember($index)" data-dismiss="alert"></button>
+                          <div class="photo">
+                            <img class="google-avatar" src="<%= selected_us.google_public_profile_photo_url%>"/>
+                          </div>
+                          <div class="details">
+                            <p>
+                              <span>
+                                <strong><%= selected_us.google_display_name %></strong>
+                              </span> 
+                              <span>
+                                <strong><%=selected_us.email%></strong>
+                              </span>
+                            </p>
+                          </div>
+                          <div class="clearfix"></div>
+                        </div>
+                      </div>
 
                     </div>
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit"  ng-click="share()" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
+                <button ng-show="selectedPermisssions"  type="submit"  ng-click="share({{ME}})" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
             </div>
             </form>
         </div>
@@ -1027,6 +1038,7 @@
       $('.cardElement').css({'height':(cw/1.618)+'px'});
       console.log("triggered");
   });
-$('.textfill').textfill({debug: true, maxFontPixels: 16});
-$('#slimList').slimScroll({});
+ $('.textfill').textfill({debug: true, maxFontPixels: 16});
+  $('#slimList').slimScroll({});
+  $('#assigeeList1').slimScroll({});
 </script>
