add close button in wizard and reorder
Former-commit-id: a0095a1bf3c33e0858d9e4393b487150f7f64cb2 [formerly bb4bea14a92fa625234b3f9426820f90c26465a2] [formerly 6874d08974f9604ac009400161c25180a60b6201 [formerly b5bdddccda967e760da9fec28a78ea139a05817f]]
Former-commit-id: 244f12c1957b726fdbd9b19cf1bad61460a2347b [formerly dd60a5c03942031efd0e3c4ce16f9c00739fd66f]
Former-commit-id: 4af1e9add8a08191030ed12b856ec14b6ee19c74

--- a/static/hopscotch/css/hopscotch.css
+++ b/static/hopscotch/css/hopscotch.css
@@ -401,13 +401,13 @@ div.hopscotch-bubble.no-number .hopscotch-bubble-content {
 }
 div.hopscotch-bubble .hopscotch-bubble-close {
 
-  color: #1565C0;
-  background-color: transparent url(../img/sprite-green.png) 0 0 no-repeat;
-  display: block;
+ color: #1565C0;
+   background: transparent url(../img/sprite-green.png) 0 0 no-repeat;
+ display: block;
   padding: 8px;
   position: absolute;
   text-decoration: none;
-  text-indent: -20px;
+  text-indent: -30px;
   
   width: 8px;
   height: 8px;
