generate the chenges of yacine in conact account opportunity
Former-commit-id: ab3e928a35e96acd69b6cab8741931b92eff37ea [formerly 27f39fd04128a7e52e260ac1fe6e505b45232d45] [formerly 2b33d494c044107c983157c8b93a3fd0f0698288 [formerly b30481e1808cd121f151b32acee299a246ce0d50]]
Former-commit-id: 46aaa4f2de695321661602667d18a5b9db8496ac [formerly 9c1f5eaf6f27d80f2a04db96bafbbbbe0790ebe6]
Former-commit-id: 0ca5011f5efe997729ee6132ec1468f6cd0da738

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -42,6 +42,9 @@
                 <a class="headerBtn" title="Refresh" ng-click="runTheProcess();"> 
                       <i class="fa fa-repeat" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
+                  <a class="" title="Share" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" href="#sharingSettingsModal" data-toggle="modal" ng-hide="selectedCards.length==0" ng-click="checkPermissions({{ME}})"> 
+                      <i class="fa fa-share-square-o" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
                 <!--<a class="" title="Preview" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa fa-eye" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
@@ -1007,7 +1010,84 @@
                           </div>
                         </div>
 
+<!-- sharing modal -->
 
+<div id="sharingSettingsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
+            </div>
+            <div class="modal-body">
+                <form id="addMember" name="addaccount" class="form-horizontal">
+                    <p ng-show="selectedPermisssions">{{ _("Who has access:")}}</p>
+                    <div  class="radio-list" ng-show="selectedPermisssions">
+                        <label>
+                            <input type="radio" name="optionRadio" value="public" ng-model="selected_access" />
+                            {{ _("public: Anyone within your organization can access and find")}}
+                        </label>
+                        <label >
+                            <input type="radio" name="optionRadio"  value="private" ng-model="selected_access"/>
+                            {{ _("private: only you and your collaborators")}}
+                        </label>
+                    </div>
+                    <div ng-hide="selectedPermisssions">
+
+                        <label style="font-size:17px !important">{{ _("You can't share")}} 
+                            <span ng-show="selectedCards.length == 1">{{ _("this lead")}}</span>
+                            <span ng-show="selectedCards.length > 1">{{ _("these leads")}}</span>
+                          {{ _("you are not the owner")}} </label> <br>
+                        <label ng-show="selectedPermisssions">{{ _("The owner is:")}}</label>
+                    </div>
+                    <hr ng-show="selectedPermisssions" ng-hide="selected_access=='public'"/>
+                    <!--<div ng-show="selectedPermisssions" class='' id="collaborators" ng-hide="lead.access=='public'">
+                        <p>{{ _("Collaborators:")}}</p>
+                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
+                            <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
+                            <%=collaborator.display_name%> <  <a> <%=collaborator.email%> </a> > 
+                            <button class ="btn" ng-hide="lead.owner.google_user_id==collaborator.google_user_id || lead.access=='public' || lead.owner.google_user_id!={{ME}}" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
+                        </div>
+
+                    </div>
+                    <hr ng-show="selectedPermisssions"/>-->
+
+                    <div ng-hide="selected_access=='public'">
+                        <p>{{ _("Invite collaborators:")}}</p>
+                        <div class="form-group" style="margin-left: 0px; margin-right: 0px;">
+                            <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                        </div>
+                        <div id="assigeeList1" class="list-group">
+                        <div  class="taskAssigneList invitation list-group-item" ng-repeat="selected_us in sharing_with" style="padding: 5px;">
+                          <button type="button" class="close" ng-click="unselectMember($index)" data-dismiss="alert"></button>
+                          <div class="photo">
+                            <img class="google-avatar" src="<%= selected_us.google_public_profile_photo_url%>"/>
+                          </div>
+                          <div class="details">
+                            <p>
+                              <span>
+                                <strong><%= selected_us.google_display_name %></strong>
+                              </span> 
+                              <span>
+                                <strong><%=selected_us.email%></strong>
+                              </span>
+                            </p>
+                          </div>
+                          <div class="clearfix"></div>
+                        </div>
+                      </div>
+
+                    </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <button ng-show="selectedPermisssions"  type="submit"  ng-click="share({{ME}})" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
+            </div>
+            </form>
+        </div>
+    </div>
+
+</div>
 
 <script type="text/javascript">
  $('#slimtest1').slimScroll({
