--- a/templates/base.html
+++ b/templates/base.html
@@ -387,10 +387,10 @@
 <script type="text/javascript">
 
 
- // var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
- var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+ // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
