--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <!-- saved from url=(0029)https://www.google.com/drive/ -->
-<html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en">
+<script type="text/javascript">
+
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+if (window.location.host != "localhost")
+{
+  {%if user %}
+    console.log('1');
+    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga('send', 'pageview');
+  {% else %}
+        console.log('2');
+        ga('create', 'UA-52188380-1', 'auto');
+        ga('send', 'pageview');
+  {% endif %}
+}
+
+
+</script>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta http-equiv="content-language" content="en">
     <meta charset="utf-8">
@@ -58,27 +81,7 @@
     s.parentNode.insertBefore(po, s);
   })();
   </script>
-<script type="text/javascript">
 
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-if (window.location.host != "localhost")
-{
-  {%if user %}
-    console.log('1');
-    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
-    ga('send', 'pageview');
-  {% else %}
-        console.log('2');
-        ga('create', 'UA-52188380-1', 'auto');
-        ga('send', 'pageview');
-  {% endif %}
-}
-
-
-</script>
 <!-- End Google Analytics -->
 
 
