--- a/templates/new_web_site/sign-in.html
+++ b/templates/new_web_site/sign-in.html
@@ -26,6 +26,23 @@
     s.parentNode.insertBefore(po, s);
   })();
   </script>
+  <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+{%if user %}
+    console.log('1 sign-in');
+    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga('send', 'pageview');
+{% else %}
+    console.log('2 sign-in');
+    ga('create', 'UA-52188380-1', 'auto');
+    ga('send', 'pageview');
+{% endif %}
+
+</script>
   </head>
   <body class="download nav-dark hoverable">
     <header class="header" role="banner">
@@ -55,19 +72,9 @@
             </p>
             <p>Smoothly integrated with Google Apps for Work.</p>
             
-                        {%if user %}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                        </button>
-                        {%else%}
-                          <button class="g-signin"
+                        {%if offline_access_prompt %}
+                            
+                            <button class="g-signin"
                               data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
                               data-requestvisibleactions="http://schemas.google.com/AddActivity"
                               data-clientId="{{ CLIENT_ID }}"
@@ -78,8 +85,23 @@
                               data-cookiepolicy="single_host_origin"
                               data-width="wide"
                               data-height="tall">
-                        </button>
+                          </button>
+
+                        {%else%}
+                            <button class="g-signin"
+                                data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
+                                data-requestvisibleactions="http://schemas.google.com/AddActivity"
+                                data-clientId="{{ CLIENT_ID }}"
+                                data-callback="onSignInCallback"
+                                data-theme="dark"
+                                data-cookiepolicy="single_host_origin"
+                                data-width="wide"
+                                data-height="tall">
+                            </button>
                         {%endif%}
+
+                       
+                          
                         
 
 
@@ -301,119 +323,8 @@ function onSignInCallback(authResult) {
  */
 
 </script>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-{%if user %}
-    console.log('1 sign-in');
-    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
-    ga('send', 'pageview');
-{% else %}
-    console.log('2 sign-in');
-    ga('create', 'UA-52188380-1', 'auto');
-    ga('send', 'pageview');
-{% endif %}
-
-</script>
-
-  </head>
-  <body class="download nav-dark hoverable">
-    <header class="header" role="banner">
-      <div class="header-item with-site-logo">
-        <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo" >
-        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png"></a>
-      </div>
-      <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
-       
-      </nav>
-      
-    </header>
-    <section class="section-intro" style="height: 560px; opacity: 1;">
-      <div class="content" style="margin-left: 309.5px !important;">
-        <div class="column column-left with-example">
-          <img alt="The crm you need, all in one place. Smoothly integrated with Google Apps for Work." class="example" src="http://storage.googleapis.com/iogrow-gs/devices.jpg">
-        </div>
-        <div class="column column-right with-copy">
-          <div class="copy text-left">
-            <h1 class="section-headline heading-headline allow-orphan">
-              Sign in
-            </h1>
-            <p>
-              The tools you need, all in one place.
-            </p>
-            <p>Smoothly integrated with Google Apps for Work.</p>
-            
-                        {%if user %}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                        </button>
-                        {%else%}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-accesstype="offline"
-                              data-approvalprompt="force"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                        </button>
-                        {%endif%}
-                        
-
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="signature-wrapper">
-      <div id="maia-signature"></div>
-    </div>
-    <div class="maia-footer" id="maia-footer">
-      <div id="maia-footer-global">
-        <div class="maia-aux">
-          <ul>
-          <li>
-            800 West El Camino Real,
-Suite 180, Mountain View,
-California, 94040,
-          </li>
-            <li>
-            
-                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow">Facebook</a>
-            
-            </li>
-           
-            <li>
-              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
-            </li>
-            <li>
-              <a href="/terms-of-services/">Terms of service</a>
-            </li>
-            <li>
-              <a href="/privacy/">Privacy policy</a>
-            </li>
-            <li>
-              <a href="/security/">Security information</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div><script src="/static/new_web_site/google_drive_files/TweenMax.min.js">
+<script src="/static/new_web_site/google_drive_files/TweenMax.min.js">
 </script> <script src="/static/new_web_site/google_drive_files/morlock.min.js">
 </script> <script src="/static/new_web_site/google_drive_files/drive-site.min.js">
 </script> <script>
