finishing show new design
Former-commit-id: c99865304f3605c17343ca7f076d4c750ecb1e3e [formerly 4899c2fe5933e65ebdda2df65828b3673a81fb8c] [formerly 6b87954702308248c085de9ed653afa14fd28793 [formerly df79f93dd306b9106753f310fb925a2bb93e4909]]
Former-commit-id: 0d26b251a24d03612c42e9d939b9e250ec9da847 [formerly 9f349e5088f6210f3e2d8513618c6613c3ea8ae1]
Former-commit-id: 20adc1fac4820126d267a98e61f79438e48d8793

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
       <!-- BEGIN LOGO -->
      <!--  <a class="navbar-brand" > -->
       <div ng-controller="SearchFormController" onmouseover="ShowUpdateLogo()"  onmouseout="HideupdateLogo()" >
-     <a  class="navbar-brand" onclick="window.open('https://www.facebook.com','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350');"  >
+     <a  class="navbar-brand" href="/">
           
        {% if logo != None %}
         <img src="{{logo.fileUrl}}" alt="logo" class="img-responsive" style="height:auto; width:auto; max-width:100px; max-height:32px;"/>
